Cleanup the about page

--- a/public/about-en.html
+++ b/public/about-en.html
@@ -14,15 +14,7 @@
     <a href="about-fr.html">Version Française</a>
   </div>
   <h1 class='title'>About this Website:</h1>
-<p>This website is hosted in Gitlab using the "Gitlab Pages" feature.
-<br>
-Gitlab itself is hosted in Google cloud in the USA, therefore this website is hosted in Google cloud in the USA.
-<br>
-As you can imagine this far from ideal but due to personal reason I can't spend money for this website (yet).
-<br><br>
-This website is entirely Static and Javascript-Free, at first this was the objective (and considering that Gitlab Pages don't allow dynamic websites this was the way to go) but this is now really limiting considering that I can't embed other open source project in it (I'm interested in a commenting system for example).
-<br><br>
-You can support me and the development of this website by contributing or donating: <p>
+<p>You can support me and the development of this website by contributing or donating: </p>
   <h2>Contribute:</h2>
     <li><a href="https://github.com/TheFrenchGhosty/thefrenchghosty.xyz">Github</a></li>
       <h4>Contributors:</h4>
@@ -38,9 +30,7 @@ You can support me and the development of this website by contributing or donati
   <h2>Donate:</h2>
     <li>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
   <h2>Contact:</h2>
-    <li>XMPP (prefered): <a href="xmpp:thefrenchghosty@snopyta.org">thefrenchghosty@snopyta.org</a></li>
-    <li>Matrix: @thefrenchghosty:privacytools.io></li>
-    <li>Email: thefrenchghosty [at] posteo [dot] is</li>
+    <li>See <a href="https://pussthecat.org/about/">https://pussthecat.org/about/</a></li>
   <div class="footer">
     <p><a href="#">About</a></p>
   </div>
