Remove the french version

--- a/public/directors.html
+++ b/public/directors.html
@@ -9,12 +9,9 @@
 </head>
 
 <body>
-  <a href="https://pussthecat.org/thefrenchghosty/">Accueil</a>
-  <div class="version">
-    <a href="directors-en.html">English Version</a>
-  </div>
-  <h1 class='title'>Recommendations Filmiques</h1>
-  <h2>Réalisateurs :</h2>
+  <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
+  <h1 class='title'>Movies Recommendations</h1>
+  <h2>Directors :</h2>
     <ul>
       <li>Akira Kurosawa</li>
       <li>Alain Resnais</li>
@@ -137,7 +134,7 @@
       <li>Yeon Sang-ho</li>
       <li>Yuri Norstein</li>
     </ul>
-  <h2>Studio d'animations :</h2>
+  <h2>Animation Studio :</h2>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Assemblage_Entertainment">Assemblage Entertainment</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Blue_Sky_Studios">Blue Sky Studios</a></li>
@@ -151,7 +148,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Vanguard_Animation">Vanguard Animation</a></li>
     </ul>
   <div class="footer">
-    <p><a href="about-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about.html">Support the Development</a></p>
   </div>
 </body>
 
