--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,35 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
-<!--   <div class="version">
-    <a href="index.html">Light Theme</a>
-  </div> -->
-  <div class="flag-container">
-    <div class="flags">
-      <img src="images/en.svg">
-        <div class="en">
-          <a href="en.html">English</a>
-        </div>
-      </div>
-    <div class="flags">
-      <img src="images/fr.svg">
-        <div class="fr">
-          <a href="fr.html">Français</a>
-        </div>
-      </div>
-  </div>
-  <div class="index-footer">
-    <p><a href="about-en.html">About</a></p>
+  <h1 class='title'>Welcome</h1>
+  <h2>My Projects :</h2>
+    <ul>
+      <li><a href="https://github.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
+      <li><a href="my-translations.html">My Translations</a></li>
+      <li><a href="my-bug-reports.html">My Bug Reports</a></li>
+      <li><a href="https://github.com/TheFrenchGhosty/TheFrenchGhostys-YouTube-DL-Archivist-Scripts">YouTube-DL Archivist Scripts</a></li>
+      <li><a href="https://github.com/TheFrenchGhosty/TheFrenchGhostys-GOG-Archivist-Scripts">GOG Archivist Scripts</a></li>
+    </ul>
+  <h2>Articles :</h2>
+    <ul>
+      <li><a href="privacy-fr.html">Privacy and why it's important</a></li>
+      <li><a href="web-browsers.html">Privacy focused web browsers configuration</a></li>
+    </ul>
+  <h2>Lists :</h2>
+    <ul>
+      <li><a href="directors.html">Movies Recommendations</a></li>
+      <li><a href="Writers.txt">Books Writers</a></li>
+      <li><a href="Games.txt">Video Games</a></li>
+      <li><a href="Linux Setup.txt">Linux Setup</a></li>
+      <li><a href="Commands.txt">Linux Commands</a></li>
+    </ul>
+  <div class="footer">
+    <p><a href="about.html">About</a></p>
   </div>
 </body>
 
