--- a/public/my-bug-reports.html
+++ b/public/my-bug-reports.html
@@ -10,9 +10,6 @@
 
 <body>
   <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
-  <div class="version">
-    <a href="my-bug-reports-fr.html">Version Française</a>
-  </div>
   <h1 class='title'>My Bug Reports :</h1>
   <h5>The list contain only the softwares / games where I reported at least 10 bugs.</h5>
   <h2>Softwares :</h2>
@@ -41,7 +38,7 @@
       <li>More bugs have been reported directly to the developer.</li>
     </ul>
   <div class="footer">
-    <p><a href="about-en.html">Support the Development</a></p>
+    <p><a href="about.html">Support the Development</a></p>
   </div>
 </body>
 
