--- a/public/my-translations.html
+++ b/public/my-translations.html
@@ -10,9 +10,6 @@
 
 <body>
   <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
-  <div class="version">
-    <a href="my-translations-fr.html">Version Française</a>
-  </div>
   <h1 class='title'>My Translations :</h1>
   <h5>00 - A dozen translations of video game mods.</h5>
   <h2><a href="https://github.com/FreeTubeApp/FreeTube">01 - FreeTube</a></h2>
@@ -34,7 +31,7 @@
       <li><a href="https://www.transifex.com/keepassxc/keepassxc/translate/#fr/develop--keepassx_ents/159693888?q=translator%3ATheFrenchGhosty">On Transifex</a> (Require an account)</li>
     </ul>
   <div class="footer">
-    <p><a href="about-en.html">Support the Development</a></p>
+    <p><a href="about.html">Support the Development</a></p>
   </div>
 </body>
 
