--- a/public/web-browsers.html
+++ b/public/web-browsers.html
@@ -11,9 +11,6 @@
 
 <body>
   <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
-  <div class="version">
-    <a href="web-browsers-fr.html">Version Française</a>
-  </div>
   <h1 class='title'>Web Browsers</h1>
 
   <table>
@@ -255,7 +252,7 @@
     </tr>
 </table>
   <div class="footer">
-    <p><a href="about-en.html">About</a></p>
+    <p><a href="about.html">About</a></p>
   </div>
 </body>
 </html>
