--- a/public/privacy.html
+++ b/public/privacy.html
@@ -10,13 +10,10 @@
 
 <body>
   <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
-  <div class="version">
-    <a href="privacy-fr.html">Version Française</a>
-  </div>
   <h1 class='title'>SOON<h></h1>
   <p class='title'>French version available <a href="privacy-fr.html">here</a>
   <div class="footer">
-    <p><a href="about-en.html">About</a></p>
+    <p><a href="about.html">About</a></p>
   </div>
 </body>
 
